____________________________________________________________________________
[  4058] By: autrijus                              on 2002/04/30  16:34:09
        Log: * This be AutoInstall 0.29.
             * change the boostrap code to allow CPANPLUS.
	   ! AutoInstall.pm Makefile.PL
____________________________________________________________________________
[  4024] By: autrijus                              on 2002/04/29  11:59:28
        Log: * Sort::Versions thinks 0.55 > 0.7. Inexcusable.
	   ! AutoInstall.pm
____________________________________________________________________________
[  3923] By: autrijus                              on 2002/04/20  08:04:17
        Log: * check rv first
	   ! AutoInstall.pm
____________________________________________________________________________
[  3871] By: autrijus                              on 2002/04/12  15:58:29
        Log: * the probing of installation success/failure for cpan+= was
	     wrong.
	   ! AutoInstall.pm
____________________________________________________________________________
[  3853] By: autrijus                              on 2002/04/10  13:59:20
        Log: * I should be called Autrijus 'typo' Tang.
	   ! AutoInstall.pm
____________________________________________________________________________
[  3851] By: autrijus                              on 2002/04/10  13:50:44
        Log: * this be 0.29.
             * be more 0.01 compatible.
	   ! AutoInstall.pm
____________________________________________________________________________
[  3850] By: autrijus                              on 2002/04/10  13:47:03
        Log: * don't use modobj methods that weren't available before 0.03.
	   ! AutoInstall.pm
____________________________________________________________________________
[  3828] By: autrijus                              on 2002/04/09  18:27:41
        Log: * changes.
	   ! Changes
____________________________________________________________________________